--- a/inClassLab.html
+++ b/inClassLab.html
@@ -15,6 +15,7 @@
   </ul>
 
 <script>
+    // Initializing a counter
     let counter = 0
     let inputEl = document.querySelector("#text")
     let addButtonEl = document.querySelector("#add")
@@ -24,6 +25,7 @@
   
 
     addButtonEl.addEventListener("click", function(){
+     // Logic to handle validation 
     if( inputEl.value.length == 0 ){
         return
     }
@@ -57,6 +59,8 @@
     }
 
     })
+  
+    //Clearing function 
 
     clearButton.addEventListener("click", function(){
         list.innerHTML = ""
